# squeeze_net

./: README.md  pyproject.toml
notebooks/: train.ipynb
src/squeeze_net/: __init__.py  data.py  model.py
tests/: test_pipeline.py
