[project]
name = "squeeze-net"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Haislich", email = "josedlv936@gmail.com" }]
dependencies = ["torch>=2.4.0", "dataset>=1.6.2", "numpy==1.26.4"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pylint>=3.2.6", "black>=24.4.2", "mypy>=1.11.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/squeeze_net"]
