[project]
name = "squeeze-net"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Haislich", email = "josedlv936@gmail.com" }]
dependencies = [
    "numpy==1.26.4",
    "datasets>=2.20.0",
    "pillow>=10.4.0",
    "torchvision>=0.19.0",
    "torch>=2.4.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "jupyter-core>=5.7.2",
    "six>=1.16.0",
    "stack-data>=0.6.3",
    "tornado>=6.4.1",
    "traitlets>=5.14.3",
    "wcwidth>=0.2.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pylint>=3.2.6",
    "black>=24.4.2",
    "mypy>=1.11.1",
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/squeeze_net"]
